# pretty-dir

./: .gitignore  CHANGELOG.md  Makefile  README.md  setup.cfg
src/pdir/: __init__.py  pdir.py
