[metadata]
name = pdir-athesto
version = 0.0.6
author = Gustavo Mejía
author_email = gamez.live@gmail.com
description = pdir is a pretty print function for the dir() command.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/athesto/pretty-dir
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src
